==> moshang666666/XXHH/09-1-MQTT-Modbus/User/mqtt/bsp_esp8266.c <==
#include "./mqtt/bsp_esp8266.h"
#include "./systick/bsp_systick.h"
#include <stdio.h>
#include <string.h>
#include <stdbool.h>
#include <stdarg.h>
#include "./mqtt/bsp_esp8266_mqtt.h"           /* ESP8266_MQTT_TCP_CONNECT_AND_SUB / ESP8266_MQTT_PUB / ESP8266_MQTT_POLL_RECEIVE */
#include "./pwm/bsp_pwm.h"                     /* LED_PWM_GetDuty */
#include "./modbus_master/application_data_manager.h" /* 应用数据管理层 */
#include "./alarm/alarm.h"                     /* 报警系统 */

static void ESP8266_GPIO_Config(void)
{
    /*定义一个GPIO_InitTypeDef类型的结构体*/
    GPIO_InitTypeDef GPIO_InitStructure;

    /* 配置 CH_PD 引脚*/
    macESP8266_CH_PD_AHBxClock_FUN(macESP8266_CH_PD_CLK, ENABLE);
    GPIO_InitStructure.GPIO_Pin = macESP8266_CH_PD_PIN;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(macESP8266_CH_PD_PORT, &GPIO_InitStructure);

    /* 配置 RST 引脚*/
    macESP8266_RST_AHBxClock_FUN(macESP8266_RST_CLK, ENABLE);
    GPIO_InitStructure.GPIO_Pin = macESP8266_RST_PIN;
    GPIO_Init(macESP8266_RST_PORT, &GPIO_InitStructure);
}

static void ESP8266_USART_Config(void)
{
    GPIO_InitTypeDef GPIO_InitStructure;
    USART_InitTypeDef USART_InitStructure;

    macESP8266_USART_GPIO_AHBxClock_FUN(macESP8266_USART_GPIO_CLK, ENABLE);

    /* 使能 UART 时钟 */
    RCC_APB1PeriphClockCmd(macESP8266_USART_CLK, ENABLE);

    /* 连接 PXx 到 USARTx_Tx*/
    GPIO_PinAFConfig(macESP8266_USART_RX_PORT, macESP8266_USARTx_RX_SOURCE, macESP8266_USARTx_RX_AF);

    /*  连接 PXx 到 USARTx__Rx*/
    GPIO_PinAFConfig(macESP8266_USART_TX_PORT, macESP8266_USARTx_TX_SOURCE, macESP8266_USARTx_TX_AF);

    /* 配置Tx引脚为复用功能  */
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;

    GPIO_InitStructure.GPIO_Pin = macESP8266_USART_TX_PIN;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(macESP8266_USART_TX_PORT, &GPIO_InitStructure);

    /* 配置Rx引脚为复用功能 */
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
    GPIO_InitStructure.GPIO_Pin = macESP8266_USART_RX_PIN;
    GPIO_Init(macESP8266_USART_RX_PORT, &GPIO_InitStructure);

    /* 配置串macESP8266_USARTx 模式 */
    USART_InitStructure.USART_BaudRate = macESP8266_USART_BAUD_RATE;
    USART_InitStructure.USART_WordLength = USART_WordLength_8b;
    USART_InitStructure.USART_StopBits = USART_StopBits_1;
    USART_InitStructure.USART_Parity = USART_Parity_No;
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
    USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;
    USART_Init(macESP8266_USARTx, &USART_InitStructure);

    /* 中断配置 */
    USART_ITConfig(macESP8266_USARTx, USART_IT_RXNE, ENABLE); // 使能串口接收中断
    USART_ITConfig(macESP8266_USARTx, USART_IT_IDLE, ENABLE); // 使能串口总线空闲中断

    ESP8266_USART_NVIC_Configuration();

    USART_Cmd(macESP8266_USARTx, ENABLE);
}

static void ESP8266_USART_NVIC_Configuration(void)
{
    NVIC_InitTypeDef NVIC_InitStructure;

    /* Configure the NVIC Preemption Priority Bits */
    NVIC_PriorityGroupConfig(macNVIC_PriorityGroup_x);

    /* Enable the USART2 Interrupt */
    NVIC_InitStructure.NVIC_IRQChannel = macESP8266_USART_IRQ;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);
}

bool ESP8266_Cmd(char *cmd, char *reply1, char *reply2, u32 waittime)
{
    strEsp8266_Fram_Record.InfBit.FramLength = 0; // 从新开始接收新的数据包

    ESP8266_Printf("%s\r\n", cmd);

    if ((reply1 == 0) && (reply2 == 0)) // 不需要接收数据
        return true;

    DelayMs(waittime); // 延时

    strEsp8266_Fram_Record.Data_RX_BUF[strEsp8266_Fram_Record.InfBit.FramLength] = '\0';
    strEsp8266_Fram_Record.InfBit.FramLength = 0; // 清除接收标志
    strEsp8266_Fram_Record.InfBit.FramFinishFlag = 0;
    if ((reply1 != 0) && (reply2 != 0))
        return ((bool)strstr(strEsp8266_Fram_Record.Data_RX_BUF, reply1) ||
                (bool)strstr(strEsp8266_Fram_Record.Data_RX_BUF, reply2));

    else if (reply1 != 0)
        return ((bool)strstr(strEsp8266_Fram_Record.Data_RX_BUF, reply1));

    else
        return ((bool)strstr(strEsp8266_Fram_Record.Data_RX_BUF, reply2));
}
